Mostly added content and minor deploy fixes

--- a/software/linux.html
+++ b/software/linux.html
@@ -1,7 +1,11 @@
 <h2 id='linux'>Linux</h2>
 <div>
+	<figure>
+		<img src='https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg' />
+		<figcaption style=''>Tux the mascot of Linux</figcaption>
+	</figure>
 	<p>
-	<q> Do have a moment for our Lords and Saviours Torvalds et Stallman? </q>
+	<q> Do have a moment for our Lords and Saviours Torvalds & Stallman? </q>
 	<p>
 	Obviously a joke. But more importantly...
 	</p>
@@ -19,7 +23,7 @@
 	Linux is usually used as an umbrella term as there are a whole lot of OSs that uses it.
 	You may have heard of <a href=https://ubuntu.com/>Ubuntu</a> or perhaps any of the other OSs based on it:
 	Xubuntu, Lubuntu, Ubuntu Mate etc... Personally I prefer <a href=https://debian.org/>Debian</a>.
-	You can find most of the different Linux flavours <a href='https://distrowatch.com/'>here</a>
+	You can find most of the different Linux flavours on <a href='https://distrowatch.com/'>Distrowatch.com</a>
 	</p>
 
 	<p>
@@ -32,7 +36,7 @@
 	However, delving deeper into the system reveals many locked doors, behind which may be untold riches.
 	Or maybe just some file that <i>needs</i> to be there. Changing it cause invisible forces to undo your changes.
 	Or crash the system. Who knows. The point is it is your computer and you should not be limited to what you can and cannot do with it.
-	Below are a few stories about my linux adventures. First one is why I changed to Linux.
+	Below are a few stories about my linux adventures.
 	</p>
 	<h3>The Startup Sound</h3>
 	<p>
