--- a/projects/name_generator.html
+++ b/projects/name_generator.html
@@ -14,7 +14,7 @@ Current limitations:
 Fixes:
 <ul>
 	<li>More than three of the same letter will not occur anymore.</li>
-	<li>Removed unnecessary "work-around functions" for names that would be unpronounceable, e.g. "bakkk"</li>
+	<li>Removed unnecessary "work-around functions" for names that would be unpronounceable, e.g. "bkkkktv"</li>
 	<li>Previous point did not work anyway, name generated is pronouncable from the beginning now.</li>
 </ul>
 
