--- a/software/vim.html
+++ b/software/vim.html
@@ -2,7 +2,7 @@
 	<h2>Vim</h2>
 	<p>
 	A text editor. 
-	And in order to contribute to the eternal flame war: The very best editor. 
+	And for my contribution to the eternal flame war: The very best editor. 
 	Fight me, Emacs users!
 	</p>
 	Jokes aside, I'm sure we can all agree they are both great text editors in their
@@ -11,24 +11,28 @@
 	<a href=www.vim.org/>here</a> and Emacs 
 	<a href=https://www.gnu.org/software/emacs/>here</a>.
 	<p>
-	As mentioned earlier, Vim is a text editor. That is a progam which one edits
-	texts with. Vim stands from Vi Improved. Vi in turn is an even older text
-	editor.
+	As mentioned earlier, Vim is a text editor. It is about as old as I am.
+	Vim stands from Vi Improved. Vi in turn is an even older text editor.
 	</p>
-	Why use an ancient text editor you ask? Because it runs everywhere.
-	It's a small editor that does not require much of your computer. It is very
-	useful if you only have (or only want) to do things in a terminal.
+	<p>
+	Why Vim?
+	<ul>
+		<li>It is a text editor first and foremost. It has one job and does it well.</li>
+		<li>It runs on most systems, be it Linux or some other non-*nix OS</li>
+		<li>It does not require much of your computer. Probably because it's ancient.</li>
+		<li>It is very useful if you only can (or want) to do things in a terminal.</li>
+	</ul>
 	</p>
 
 	<p>
 	Vim is not the easiest text editor to start out with,
 	but if you take your time to learn it properly you'll never want to go back.
-	It's probably the same with Emacs. I don't since I never bothered to learn it.
+	It's probably the same with Emacs. I don't known since I never bothered to learn it.
 	</p>
 
 	<p>
-	Personally I <a href='https://neovim.io'>Neovim</a> (or nvim for short) if it's available. It's a modernized verison of
-	vim if you will.
+	Personally I run <a href='https://neovim.io'>Neovim</a> (or nvim for short) if it's available. 
+	It's a modernized verison of Vim.
 	</p>
 
 	<p>
